--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-git_commit_commands.txt
-Aulas/Aula_09_03_2023_Fase1
-Aulas/Aula_09_03_2023_Fase1
+# git_commit_commands.txt
+# Aulas/Aula_09_03_2023_Fase1
+# Aulas/Aula_09_03_2023_Fase1
